force-app/main/default/objects/Ticket_Interaction__c/Ticket_Interaction__c.object-meta.xml
<CustomObject>
    <label>Ticket Interaction</label>
    <nameField>
        <displayFormat>{00}</displayFormat>
        <label>Interaction Nuber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tickets Interaction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>