force-app/main/default/objects/Ticket_Interaction__c/fields/Interaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Date__c</fullName>
    <defaultValue>NOw()</defaultValue>
    <label>Interaction Date</label>
    <type>DateTime</type>
</CustomField>