force-app/main/default/objects/Ticket_Interaction__c/fields/Interaction_Notes__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Notes__c</fullName>
    <label>Interaction Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>