force-app/main/default/objects/Ticket_Interaction__c/fields/Related_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Related_Ticket__c</fullName>
    <label>Related Ticket</label>
    <referenceTo>Support_Ticket__c</referenceTo>
    <relationshipLabel>Tickets Intercation</relationshipLabel>
    <relationshipName>Tickets_Intercation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>